Test/git-issues/git-issue-2074.dfy.expect
git-issue-2074.dfy(5,6): Error: the type of this variable is underspecified
git-issue-2074.dfy(5,25): Error: the type of this variable is underspecified
git-issue-2074.dfy(5,21): Error: type of bound variable 'x' could not be determined; please specify the type explicitly
git-issue-2074.dfy(5,17): Error: the result of a set comprehension must be finite, but Dafny's heuristics can't figure out how to produce a bounded set of values for 'x'
git-issue-2074.dfy(5,11): Error: type of bound variable 'st' could not be determined; please specify the type explicitly
5 resolution/type errors detected in git-issue-2074.dfy
