Test/git-issues/git-issue-2074.dfy
// RUN: %dafny_0 /compile:0 "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

method m() {
  var f := st => set x | x in st;
}